# nixpkgs

./: .gitignore  .gitingore  .gitmodules  .mergify.yml  LICENSE  README.md  controller-shell.nix  default.nix  display-shell.nix  display.nix  flake.nix  module.nix  overlay-ccache.nix  overlay-private.nix  overlay.nix  perSystem-shared.nix  shell.nix  shellv2.nix
.github/workflows/: book.yml  nix-private.yml  nix-variants-private.yml  nix-variants-public.yml  nix-variants.yml  nix.yml
.superbuild/: mc_rtc.yaml
docs/: README.md  SUMMARY.md  book.toml  flake.nix  module-overview.md
etc/: mc_rtc.yaml
lib/: default.nix
modules/: superbuild.nix
modules/superbuild/: options.nix  resolver.nix  superbuild.nix
pkgs/: spdlog-1.12.0.nix  sphinx-cmake.nix
pkgs/copra/: default.nix
pkgs/eigen-lssol/: default.nix
pkgs/eigen-qld/: default.nix
pkgs/eigen-quadprog/: default.nix
pkgs/eigen3-to-python/: default.nix
pkgs/gram-savitzky-golay/: default.nix
pkgs/hpp-spline/: default.nix
pkgs/hrp2-description/: default.nix
pkgs/hrp4-description/: default.nix
pkgs/hrp5-p-description/: default.nix
pkgs/mc-hrp2/: default.nix
pkgs/mc-hrp4/: default.nix
pkgs/mc-hrp5-p/: default.nix
pkgs/mc-panda/: default.nix  franka-description.nix  mc-franka.nix  mc-panda-lirmm.nix
pkgs/mc-rbdyn-urdf/: default.nix
pkgs/mc-rtc/: default.nix  mc-mujoco.nix  mc-rtc-base.nix  mc-rtc-common.nix  mc-rtc-python-utils.nix  mc-rtc-ros-compat.nix  mc-rtc-superbuild-standalone.nix  mc-rtc-superbuild-symlinkjoin.nix  mc-rtc-superbuild.nix  mc-rtc-ticker.nix  mc-rtc.nix  mk-mc-rtc-controller.nix
pkgs/mc-rtc-data/: default.nix  jvrc-description.nix  mc-env-description.nix  mc-int-obj-description.nix
pkgs/mc-rtc-imgui/: default.nix
pkgs/mc-rtc-magnum/: default.nix  standalone.nix
pkgs/mc-rtc-msgs/: default.nix
pkgs/mc-rtc-raylib/: default.nix
pkgs/mc-udp/: default.nix
pkgs/mesh-sampling/: default.nix
pkgs/omniorb-python/: default.nix
pkgs/openrtm-aist/: default.nix
pkgs/openrtm-aist-python/: default.nix
pkgs/rbdyn/: default.nix
pkgs/sch-core/: default.nix
pkgs/sch-core-python/: default.nix
pkgs/sch-visualization/: default.nix
pkgs/spacevecalg/: default.nix
pkgs/state-observation/: default.nix
pkgs/tasks/: default.nix
pkgs/tvm/: default.nix
private/: flake.nix
py-pkgs/: eigen3-to-python.nix  mc-rtc.nix  rbdyn.nix  sch-core-python.nix  spacevecalg.nix  tasks.nix
templates/controller/: .gitignore  .mergify.yml  flake.nix
templates/default/: .mergify.yml  (+1 more)
templates/flakoboros-new-cpp-package/: CMakeLists.txt  flake.nix
templates/flakoboros-new-cpp-package/cmake/: get-jrl-cmakemodules.cmake
templates/flakoboros-new-cpp-package/include/cpp-template/: cpp-template.h
templates/flakoboros-new-cpp-package/src/: cpp-template.cpp
templates/flakoboros-new-cpp-package/test/: test-cpp-template.cpp
test/: CMakeLists.txt  main.cpp
ticker/: CMakeLists.txt
(+77 files in other folders)
